--- a/css/order.scss
+++ b/css/order.scss
@@ -24,6 +24,12 @@
 .input_wrap {
   margin-bottom: 40px;
 
+  p.tac {
+    @media all and (max-width: 767px) {
+      text-align: left;
+    }
+  }
+
   input {
     width: 100%;
   }
@@ -71,13 +77,26 @@
 .radio_group {
   grid-gap: 50px;
   margin-bottom: 50px;
+
+  @media all and (max-width: 767px) {
+    grid-gap: inherit;
+    justify-content: space-between;
+  }
 }
 
 .double_input {
   grid-gap: 20px;
 
+  @media all and (max-width: 767px) {
+    display: block;
+  }
+
   & > * {
     max-width: calc(50% - 10px);
+
+    @media all and (max-width: 767px) {
+      max-width: 100%;
+    }
   }
 
   .default_btn {
@@ -180,6 +199,28 @@
   @media all and (max-width: 1400px) {
     padding-left: 0;
     padding-right: 0;
+  }
+
+  &.mobile {
+    order: 4;
+
+    .custom_radio {
+      padding-bottom: 45px;
+      margin-bottom: 30px;
+      border-bottom: 2px solid #f26522;
+    }
+
+    .total_price {
+      p {
+        width: 100%;
+        display: flex;
+        align-items: center;
+
+        &::before {
+          flex: 1 1 auto;
+        }
+      }
+    }
   }
 }
 
