--- a/css/styles.css
+++ b/css/styles.css
@@ -2947,6 +2947,7 @@ menu {
 
 @media all and (max-width: 1400px) {
   .grid_section {
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     grid-template-rows: repeat(auto-fill, minmax(200px, 1fr));
   }
 }
@@ -2966,8 +2967,7 @@ menu {
 
 .grid_section .one,
 .grid_section .one a {
-  height: 100%;
-  min-height: 250px;
+  height: 250px;
   display: block;
   overflow: hidden;
   background-repeat: no-repeat;
@@ -3170,6 +3170,11 @@ menu {
     grid-column-end: 5;
     grid-row-start: 1;
     grid-row-end: 3;
+    height: 520px;
+  }
+  .grid_section .one:nth-child(3):nth-last-child(4) a,
+  .grid_section .one a:nth-child(3):nth-last-child(4) a {
+    height: 100%;
   }
   .grid_section .one:nth-child(5):nth-last-child(2),
   .grid_section .one a:nth-child(5):nth-last-child(2) {
