--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1416,6 +1416,7 @@ menu {
   grid-template-rows: repeat(auto-fill, minmax(250px, 1fr));
 
   @media all and (max-width: 1400px) {
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     grid-template-rows: repeat(auto-fill, minmax(200px, 1fr));
   }
 
@@ -1430,8 +1431,7 @@ menu {
 
   .one,
   .one a {
-    height: 100%;
-    min-height: 250px;
+    height: 250px;
     display: block;
     overflow: hidden;
     background-repeat: no-repeat;
@@ -1618,6 +1618,11 @@ menu {
         grid-column-end: 5;
         grid-row-start: 1;
         grid-row-end: 3;
+        height: 520px;
+
+        a {
+          height: 100%;
+        }
       }
 
       &:nth-child(5):nth-last-child(2) {
