--- a/css/styles.css
+++ b/css/styles.css
@@ -1554,6 +1554,8 @@ a h6 {
   line-height: 25px;
   color: #0e294a;
   margin-top: 40px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 @media all and (max-width: 767px) {
@@ -1627,25 +1629,74 @@ a h6 {
   height: 2px;
 }
 
-.modal_overlay .stars {
-  cursor: pointer;
-  justify-content: center;
-  margin-bottom: 50px;
-  grid-gap: 24px;
-}
-
-.modal_overlay .stars img {
-  height: 40px;
-}
-
-.modal_overlay #registrate .default_btn {
+.modal_overlay #registrate .default_btn,
+.modal_overlay #new_adress .default_btn {
   margin-top: 60px;
 }
 
 @media all and (max-width: 767px) {
-  .modal_overlay #registrate .default_btn {
+  .modal_overlay #registrate .default_btn,
+  .modal_overlay #new_adress .default_btn {
     margin-top: 45px;
   }
+}
+
+.double_input {
+  grid-gap: 20px;
+  display: flex;
+}
+
+@media all and (max-width: 767px) {
+  .double_input {
+    display: block;
+  }
+}
+
+.double_input .input_wrap + .input_wrap {
+  margin-top: 0;
+}
+
+@media all and (max-width: 767px) {
+  .double_input .input_wrap + .input_wrap {
+    margin-top: 20px;
+  }
+}
+
+.double_input + .double_input {
+  margin-top: 40px;
+}
+
+@media all and (max-width: 767px) {
+  .double_input + .double_input {
+    margin-top: 20px;
+  }
+}
+
+.double_input > * {
+  max-width: calc(50% - 10px);
+}
+
+@media all and (max-width: 767px) {
+  .double_input > * {
+    max-width: 100%;
+  }
+}
+
+#registrate,
+#new_adress {
+  max-width: 90%;
+}
+
+#registrate input,
+#new_adress input {
+  max-width: 100%;
+}
+
+.my_rating {
+  display: flex;
+  justify-content: center;
+  grid-gap: 25px;
+  margin-bottom: 40px;
 }
 
 /*
